--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./src/assets/w3.css">
     <title>Vite + React</title>
   </head>
-  <body>
+  <body style="background-image: url(./src/res/photo-1663659512973-8df941db5e1a.avif);background-repeat: no-repeat;background-size: cover;">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
